# bakalog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
all-MiniLM-L6-v2/: config.json
bakalog/: __init__.py  __main__.py  cluster.py  extract.py  util.py
docs/: Gemfile  _config.yml  index.md
docs/_posts/: 2023-10-07-welcome-to-jekyll.markdown
log2row/: __main__.py  extract.py  util.py
