[tool.poetry]
name = "log2row"
version = "0.1.0"
description = ""
authors = ["Gwo Tzu-Hsing <gotzehsing@gmail.com>"]
readme = "README.md"
include = ["./all-MiniLM-L6-v2"]

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^2.2.2"
openai = "^0.28.0"
duckdb = "^0.9.0"
torch = "^2.0.1"
click = "^8.1.7"
ipython = "^8.15.0"
rich = "^13.5.3"
pypika = "^0.48.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
